[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-app"
version = "0.0.50"
description = "Helpers for building Python app or cli."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "dotenv",
    "pydantic>=2,<3",
    "python-dotenv",
    "wexample-filestate==0.0.51",
    "wexample-helpers-yaml==0.0.67",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-app"

[project.optional-dependencies]
dev = [
    "pytest",
]
[tool.setuptools.packages.find]
include = [
    "*",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = [
    'src/wexample_app/*',
]

[[tool.pdm.build.packages]]
include = "wexample_app"
from = "src"
